fix issue custom client_request join query when job_executor data is empty update ddl schema for cron expression length fix http method validator validation fix missing @PathVariable annotation remove unused r2dbc function fix issue update job executor and missmatch error checking on validation add integration and unit test update pom for sonar coverage